frontend login registro

--- a/frontend/src/app/auth/login/login.html
+++ b/frontend/src/app/auth/login/login.html
@@ -1,1 +1,25 @@
-<p>login works!</p>
+<div class="registro-container">
+  <h2>Iniciar Sesión</h2>
+
+  <form [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+
+    <div>
+      <label>Correo electrónico</label>
+      <input type="email" formControlName="correo">
+      <small *ngIf="loginForm.get('correo')?.invalid && loginForm.get('correo')?.touched">
+        Correo válido requerido
+      </small>
+    </div>
+
+    <div>
+      <label>Contraseña</label>
+      <input type="password" formControlName="password">
+      <small *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched">
+        Contraseña requerida
+      </small>
+    </div>
+
+    <button type="submit">Ingresar</button>
+
+  </form>
+</div>
