--- a/frontend/src/app/auth/registro/registro.html
+++ b/frontend/src/app/auth/registro/registro.html
@@ -1,1 +1,45 @@
-<p>registro works!</p>
+<div class="registro-container">
+  <h2>Registro de Usuario</h2>
+
+  <form [formGroup]="registroForm" (ngSubmit)="onSubmit()">
+
+    <div>
+      <label>Nombre Completo</label>
+      <input type="text" formControlName="nombre">
+      <small *ngIf="registroForm.get('nombre')?.invalid && registroForm.get('nombre')?.touched">
+        El nombre es obligatorio.
+      </small>
+    </div>
+
+    <div>
+      <label>Correo Electrónico</label>
+      <input type="email" formControlName="correo">
+      <small *ngIf="registroForm.get('correo')?.invalid && registroForm.get('correo')?.touched">
+        Correo inválido.
+      </small>
+    </div>
+
+    <div>
+      <label>Contraseña</label>
+      <input type="password" formControlName="password">
+      <small *ngIf="registroForm.get('password')?.invalid && registroForm.get('password')?.touched">
+        Mínimo 6 caracteres.
+      </small>
+    </div>
+
+    <div>
+      <label>Rol</label>
+      <select formControlName="rol">
+        <option value="">Seleccione un rol</option>
+        <option value="paciente">Paciente</option>
+        <option value="medico">Profesional de la Salud</option>
+      </select>
+      <small *ngIf="registroForm.get('rol')?.invalid && registroForm.get('rol')?.touched">
+        Debe seleccionar un rol.
+      </small>
+    </div>
+
+    <button type="submit">Registrarse</button>
+
+  </form>
+</div>
